cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
find_package(CCTools REQUIRED)
add_executable(alien_work_queue alien_work_queue.cpp)
target_link_libraries(alien_work_queue work_queue dttools)
configure_file(env.sh.in env.sh)
install(TARGETS alien_work_queue RUNTIME DESTINATION bin)
install(PROGRAMS condor_q condor_submit DESTINATION bin)
install(PROGRAMS alien_wq_worker.sh DESTINATION bin)
install(FILES ${PROJECT_BINARY_DIR}/env.sh DESTINATION etc)
install(PROGRAMS ${CMAKE_SOURCE_DIR}/alien_job_wrapper.sh DESTINATION etc)
